[tool.poetry]
name = "medaimodels"
version = "0.1.0"
description = "A libarary for creating med-ai models"
authors = ["Travis Clarke","Jacob Clarke"]
license = "Apache-1.0"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
sphinx = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
